New default logging configuration includes AppDomain name, remove " AppDomain" from AppDomain names, and add pre-build event to Tracing plugin. (#524)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1470 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Tracing/HeuristicLab.Tracing.csproj
+++ b/sources/HeuristicLab.Tracing/HeuristicLab.Tracing.csproj
@@ -88,4 +88,12 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>set Path=%25Path%25;$(ProjectDir);$(SolutionDir)
+set ProjectDir=$(ProjectDir)
+set SolutionDir=$(SolutionDir)
+set Outdir=$(Outdir)
+
+call PreBuildEvent.cmd</PreBuildEvent>
+  </PropertyGroup>
 </Project>
