Include AssemblyInformation.cs in projects. (#9999)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1472 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Tracing/HeuristicLab.Tracing.csproj
+++ b/sources/HeuristicLab.Tracing/HeuristicLab.Tracing.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
