--- a/sources/HeuristicLab.Persistence.GUI/HeuristicLab.Persistence.GUI.csproj
+++ b/sources/HeuristicLab.Persistence.GUI/HeuristicLab.Persistence.GUI.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <PropertyGroup>
     <PreBuildEvent>set Path=%25Path%25;$(ProjectDir);$(SolutionDir)
