--- a/sources/HeuristicLab.Persistence/HeuristicLab.Persistence.csproj
+++ b/sources/HeuristicLab.Persistence/HeuristicLab.Persistence.csproj
@@ -112,6 +112,7 @@ call PreBuildEvent.cmd</PreBuildEvent>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="HeuristicLab.snk" />
+    <None Include="Properties\AssemblyInfo.frame" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
