Added first version of an operator to control the training set with a sliding window approach. #564 (Sliding window approach for data-based modeling)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1477 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP/HeuristicLab.GP.csproj
+++ b/sources/HeuristicLab.GP/HeuristicLab.GP.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BakedFunctionTree.cs" />
+    <Compile Include="TrainingWindowSlider.cs" />
     <Compile Include="DefaultFunctionTreeNameGenerator.cs" />
     <Compile Include="EqualiserController.cs" />
     <Compile Include="Logging\TreeArityAnalyser.cs" />
