Added AssemblyInfo.cs to project (#436)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1486 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.DataAccess.ADOHelper/HeuristicLab.DataAccess.ADOHelper.csproj
+++ b/sources/HeuristicLab.DataAccess.ADOHelper/HeuristicLab.DataAccess.ADOHelper.csproj
@@ -79,6 +79,7 @@
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataAccessADOHelperPlugin.cs" />
     <Compile Include="DataAdapterBase.cs" />
     <Compile Include="DataAdapterWrapperBase.cs" />
