--- a/sources/HeuristicLab.Hive.Server.DataAccess/HeuristicLab.Hive.Server.DataAccess.csproj
+++ b/sources/HeuristicLab.Hive.Server.DataAccess/HeuristicLab.Hive.Server.DataAccess.csproj
@@ -75,6 +75,7 @@
   </Target>
   -->
   <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HiveServerDataAccessPlugin.cs" />
     <Compile Include="IClientAdapter.cs" />
     <Compile Include="IClientGroupAdapter.cs" />
