added the recursive dependency resolvement and added the SequentialEngien Dependency to the Hive.Engine (#570)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1499 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Engine/HeuristicLab.Hive.Engine.csproj
+++ b/sources/HeuristicLab.Hive.Engine/HeuristicLab.Hive.Engine.csproj
@@ -12,6 +12,8 @@
     <AssemblyName>HeuristicLab.Hive.Engine-3.2</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -121,6 +123,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
