added recurring appoinment (#468)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1511 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/HeuristicLab.Hive.Client.Console.csproj
+++ b/sources/HeuristicLab.Hive.Client.Console/HeuristicLab.Hive.Client.Console.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Recurrence.Designer.cs">
       <DependentUpon>Recurrence.cs</DependentUpon>
     </Compile>
+    <Compile Include="RecurrentEvent.cs" />
     <Compile Include="Service References\ClientService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
