Improved handling of binary relations (#527)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1515 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.DataAccess.ADOHelper/HeuristicLab.DataAccess.ADOHelper.csproj
+++ b/sources/HeuristicLab.DataAccess.ADOHelper/HeuristicLab.DataAccess.ADOHelper.csproj
@@ -84,8 +84,8 @@
     <Compile Include="DataAdapterBase.cs" />
     <Compile Include="DataAdapterWrapperBase.cs" />
     <Compile Include="IDataAdapterWrapper.cs" />
-    <Compile Include="Relationship.cs" />
-    <Compile Include="RelationshipAdapter.cs" />
+    <Compile Include="BinaryRelation.cs" />
+    <Compile Include="BinaryRelationHelper.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="SessionFactory.cs" />
     <Compile Include="Transaction.cs" />
