--- a/sources/HeuristicLab.Security.Contracts/HeuristicLab.Security.Contracts.csproj
+++ b/sources/HeuristicLab.Security.Contracts/HeuristicLab.Security.Contracts.csproj
@@ -90,6 +90,9 @@
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
